--- a/src/components/styles/UniverseStyles.css
+++ b/src/components/styles/UniverseStyles.css
@@ -21,6 +21,7 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
+    box-shadow: 2px 2px 30px rgba(230, 240, 243, 0.703);
 }
 
 .universe--phrase{ 
